<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GuessTheCountryActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/timer_section_gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">


        <TextView
            android:id="@+id/time_remaining_text_gh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/time_remaining" />

        <TextView
            android:id="@+id/time_remaining_gh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_header_gh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:gravity="center|top|center_vertical"
        android:text="@string/guess_hints"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView_gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="150dp"
        android:src="@drawable/ad" />

    <TextView
        android:id="@+id/country_name_dashes_gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_gh" />

    <EditText
        android:id="@+id/edit_text_gh"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/guess_hints_editText_hint"

        android:singleLine="true"
        android:inputType="text"
        android:maxLength="1"/>

    <TextView
        android:id="@+id/error_message_gh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="Please Enter One Character"
        android:visibility="invisible" />


    <TextView
        android:id="@+id/guesses_remaining_gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="3" />


    <Button
        android:id="@+id/next_btn_gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onNext"
        android:text="@string/next"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/submit_btn_gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSubmit"
        android:text="@string/submit"
        android:visibility="visible" />

    <TextView
        android:id="@+id/end_message_gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Correct!"
        android:visibility="gone" />

    <TextView
        android:id="@+id/country_name_display_gh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="TextView"
        android:visibility="gone" />

</LinearLayout>


