<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".AdvLev">
    <TextView
        android:id="@+id/text_header_gtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/advanced_levels_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/timer_section_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:context=".AdvLev">


        <TextView
            android:id="@+id/time_remaining_text_al"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/time_remaining" />

        <TextView
            android:id="@+id/time_remaining_al"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical"
        tools:context=".AdvLev">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".AdvLev">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="15dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/guesses_remaining"
                android:textColor="@android:color/holo_red_light"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".AdvLev">

            <TextView
                android:id="@+id/score_al"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/holo_green_dark"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/guesses_remaining_al"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/holo_red_light"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/img1al"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:paddingTop="5dp"
            app:srcCompat="@drawable/smallad" />

        <TextView
            android:id="@+id/correct_country1_al"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text=""
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_al"
        android:singleLine="true"
        android:text=""
        android:textColor="@color/bootstrapDanger"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <ImageView
            android:id="@+id/img2al"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/smallad" />

        <TextView
            android:id="@+id/correct_country2_al"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_al"
        android:singleLine="true"
        android:text=""
        android:textSize="15dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
    <ImageView
        android:id="@+id/img3al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="60dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/smallad" />

        <TextView
            android:id="@+id/correct_country3_al"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@android:color/holo_red_light" />
    </LinearLayout>
    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_al"
        android:singleLine="true"
        android:text=""
        android:textSize="15dp" />



    <TextView
        android:id="@+id/submit_message_al"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/wrong"
        android:textColor="@color/bootstrapDanger"
        android:textSize="15dp"
        android:visibility="invisible" />


    <Button
        android:id="@+id/submit_btn_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSubmit"
        android:text="@string/submit"
        android:visibility="visible" />

    <Button
        android:id="@+id/next_btn_al"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onNext"
        android:text="@string/next"
        android:visibility="gone" />
</LinearLayout>