<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GuessTheFlagActivity">

    <TextView
        android:id="@+id/text_header_gtc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/guess_the_flag_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/timer_section_gtf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:context=".AdvLev">


        <TextView
            android:id="@+id/time_remaining_text_gtf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:text="@string/time_remaining" />

        <TextView
            android:id="@+id/time_remaining_gtf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gtf_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/flag1imgGTF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:onClick="flag1Click"
            app:srcCompat="@drawable/ad" />


        <ImageView
            android:id="@+id/flag2imgGTF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:onClick="flag2Click"
            app:srcCompat="@drawable/ad" />


        <ImageView
            android:id="@+id/flag3imgGTF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:adjustViewBounds="true"
            android:maxHeight="60dp"
            android:onClick="flag3Click"
            app:srcCompat="@drawable/ad" />
    </LinearLayout>

    <TextView
        android:id="@+id/country_name_gtf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="Country Name"
        app:layout_constraintVertical_bias="0.495" />

    <TextView
        android:id="@+id/message_gtf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Correct"
        android:visibility="invisible" />

    <Button
        android:id="@+id/next_btn_gtf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onNext"
        android:text="@string/next"
        android:visibility="visible" />

</LinearLayout>